--- a/Prevu.Synoptics.V2932_Infinya/SH.xaml
+++ b/Prevu.Synoptics.V2932_Infinya/SH.xaml
@@ -11,7 +11,7 @@
 						 lex:ResxLocalizationProvider.DefaultDictionary="Resources"
 						 mc:Ignorable="d"
              Height="840" Width="1520" d:Background="{DynamicResource MaterialDesignPaper}">
-    <Grid>
+    <Grid Margin="-2,0,2,0">
         <Labels:Pipe HorizontalAlignment="Left" Height="12" Margin="295,136,0,0" VerticalAlignment="Top" Width="66" RenderTransformOrigin="0.5,0.5" PipeHeight="Medium" StatusComponent="190-71-ECS2">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
@@ -22,7 +22,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Left" Height="12" Margin="786,204,0,0" VerticalAlignment="Top" Width="88" RenderTransformOrigin="0.5,0.5" PipeHeight="Medium" StatusComponent="190-71-ECS2">
+        <Labels:Pipe HorizontalAlignment="Left" Height="12" Margin="676,204,0,0" VerticalAlignment="Top" Width="88" RenderTransformOrigin="0.5,0.5" PipeHeight="Medium" StatusComponent="190-71-ECS2">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -32,7 +32,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Left" Height="12" Margin="410,164,0,0" VerticalAlignment="Top" Width="425" RenderTransformOrigin="0.5,0.5" PipeHeight="Medium" StatusComponent="190-71-ECS2">
+        <Labels:Pipe HorizontalAlignment="Left" Height="12" Margin="410,164,0,0" VerticalAlignment="Top" Width="315" RenderTransformOrigin="0.5,0.5" PipeHeight="Medium" StatusComponent="190-71-ECS2">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -135,7 +135,7 @@
             </Machines:CV_Valve.RenderTransform>
         </Machines:CV_Valve>
         <Border BorderThickness="1" HorizontalAlignment="Left" Height="169" Margin="210,570,0,0" VerticalAlignment="Top" Width="266" Background="Gray" CornerRadius="15,15,15,15"/>
-        <Machines:EXC_HeatExchanger HorizontalAlignment="Left" Margin="546,618,0,0" VerticalAlignment="Top" Height="74" Width="74"/>
+        <Machines:EXC_HeatExchanger HorizontalAlignment="Left" Margin="523,618,0,0" VerticalAlignment="Top" Height="74" Width="74"/>
         <Machines:NT_ConveyorBelt HorizontalAlignment="Left" Margin="1063,530,0,0" VerticalAlignment="Top" Width="200"/>
         <Machines:Radar HorizontalAlignment="Left" Margin="873,173,0,0" VerticalAlignment="Top" Height="75" Width="75"/>
         <Machines:CV_Valve_001 HorizontalAlignment="Left" Margin="518,414,0,0" VerticalAlignment="Top" Color="Water" RenderTransformOrigin="0.5,0.5" Height="75" Width="80">
@@ -158,14 +158,14 @@
         <Labels:DeviceLabel HorizontalAlignment="Left" Margin="235,668,0,0" VerticalAlignment="Top" ComponentName="190-11-R1"/>
         <Labels:DeviceLabel HorizontalAlignment="Left" Margin="235,593,0,0" VerticalAlignment="Top" ComponentName="190-03-MA1"/>
         <Labels:DeviceLabel HorizontalAlignment="Left" Margin="220,424,0,0" VerticalAlignment="Top" ComponentName="190-24-CV1"/>
-        <Labels:DeviceLabel HorizontalAlignment="Left" Margin="513,368,0,0" VerticalAlignment="Top" ComponentName="190-21-CV1"/>
+        <Labels:DeviceLabel HorizontalAlignment="Left" Margin="515,368,0,0" VerticalAlignment="Top" ComponentName="190-21-CV1"/>
         <Labels:DeviceLabel HorizontalAlignment="Left" Margin="117,0,0,0" VerticalAlignment="Center" ComponentName="190-22-CV1"/>
         <Labels:DeviceLabel HorizontalAlignment="Left" Margin="117,457,0,0" VerticalAlignment="Top" ComponentName="190-22-CV2"/>
         <Labels:DeviceLabel HorizontalAlignment="Left" Margin="582,69,0,0" VerticalAlignment="Top" ComponentName="190-71-ECS2"/>
         <Labels:DeviceLabel HorizontalAlignment="Left" Height="50" Margin="866,118,0,0" VerticalAlignment="Top" Width="90" ComponentName="190-41-LT1"/>
         <Labels:DeviceLabel HorizontalAlignment="Left" Height="50" Margin="1109,118,0,0" VerticalAlignment="Top" Width="90" ComponentName="190-SHREDDER"/>
-        <Rectangle HorizontalAlignment="Left" Height="110" Margin="1055,0,0,0" Stroke="Black" VerticalAlignment="Center" Width="2" StrokeThickness="2"/>
-        <Machines:External HorizontalAlignment="Left" Height="70" Margin="1018,289,0,0" VerticalAlignment="Top" Width="76"/>
+        <Rectangle HorizontalAlignment="Left" Height="110" Margin="1049,0,0,0" Stroke="Black" VerticalAlignment="Center" Width="2" StrokeThickness="2"/>
+        <Machines:External HorizontalAlignment="Left" Height="70" Margin="1011,290,0,0" VerticalAlignment="Top" Width="76"/>
         <TextBlock HorizontalAlignment="Left" Margin="117,517,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="88"
 							 Text="{lex:Loc Low Speed}" TextAlignment="Center" FontSize="12"/>
         <TextBlock HorizontalAlignment="Left" Margin="119,369,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="88"
