--- a/Prevu.Synoptics.V2932_Infinya/SH.xaml
+++ b/Prevu.Synoptics.V2932_Infinya/SH.xaml
@@ -12,7 +12,7 @@
 						 mc:Ignorable="d"
              Height="840" Width="1520" d:Background="{DynamicResource MaterialDesignPaper}">
     <Grid Margin="-2,0,2,0">
-        <Labels:Pipe HorizontalAlignment="Left" Height="12" Margin="295,136,0,0" VerticalAlignment="Top" Width="66" RenderTransformOrigin="0.5,0.5" PipeHeight="Medium" StatusComponent="190-71-ECS2">
+        <Labels:Pipe HorizontalAlignment="Left" Height="12" Margin="310,136,0,0" VerticalAlignment="Top" Width="66" RenderTransformOrigin="0.5,0.5" PipeHeight="Medium" StatusComponent="190-71-ECS2">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -32,7 +32,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Left" Height="12" Margin="410,164,0,0" VerticalAlignment="Top" Width="315" RenderTransformOrigin="0.5,0.5" PipeHeight="Medium" StatusComponent="190-71-ECS2">
+        <Labels:Pipe HorizontalAlignment="Left" Height="12" Margin="425,164,0,0" VerticalAlignment="Top" Width="300" RenderTransformOrigin="0.5,0.5" PipeHeight="Medium" StatusComponent="190-71-ECS2">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -42,7 +42,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Left" Height="12" Margin="914,444,0,0" VerticalAlignment="Top" Width="179" RenderTransformOrigin="0.5,0.5" PipeHeight="Medium" StatusComponent="190-01-MA1">
+        <Labels:Pipe HorizontalAlignment="Left" Height="12" Margin="914,434,0,0" VerticalAlignment="Top" Width="179" RenderTransformOrigin="0.5,0.5" PipeHeight="Medium" StatusComponent="190-01-MA1">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -52,7 +52,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Left" Height="12" Margin="1044,483,0,0" VerticalAlignment="Top" Width="88" RenderTransformOrigin="0.5,0.5" PipeHeight="Medium" StatusComponent="190-01-MA1">
+        <Labels:Pipe HorizontalAlignment="Left" Height="12" Margin="1044,473,0,0" VerticalAlignment="Top" Width="88" RenderTransformOrigin="0.5,0.5" PipeHeight="Medium" StatusComponent="190-01-MA1">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -62,7 +62,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Left" Height="12" Margin="1239,534,0,0" VerticalAlignment="Top" Width="118" RenderTransformOrigin="0.5,0.5" PipeHeight="Medium" StatusComponent="190-71-ECS1">
+        <Labels:Pipe HorizontalAlignment="Left" Height="12" Margin="1239,524,0,0" VerticalAlignment="Top" Width="118" RenderTransformOrigin="0.5,0.5" PipeHeight="Medium" StatusComponent="190-71-ECS1">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -82,7 +82,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Left" Height="10" Margin="269,359,0,0" VerticalAlignment="Top" Width="138" RenderTransformOrigin="0.5,0.5" Color="Oil" StatusComponent="190-24-CV1">
+        <Labels:Pipe HorizontalAlignment="Left" Height="10" Margin="273,364,0,0" VerticalAlignment="Top" Width="130" RenderTransformOrigin="0.5,0.5" Color="Oil" StatusComponent="190-24-CV1">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -92,7 +92,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Left" Height="10" Margin="336,292,0,0" VerticalAlignment="Top" Width="379" RenderTransformOrigin="0.5,0.5" Color="Oil" StatusComponent="190-24-CV1">
+        <Labels:Pipe HorizontalAlignment="Left" Height="10" Margin="336,301,0,0" VerticalAlignment="Top" Width="379" RenderTransformOrigin="0.5,0.5" Color="Oil" StatusComponent="190-24-CV1">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -122,7 +122,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Machines:NT_ConveyorBelt HorizontalAlignment="Left" Margin="225,160,0,0" VerticalAlignment="Top" Width="200"/>
+        <Machines:NT_ConveyorBelt HorizontalAlignment="Left" Margin="240,160,0,0" VerticalAlignment="Top" Width="200"/>
         <Machines:GR_002 HorizontalAlignment="Left" Margin="625,227,0,0" VerticalAlignment="Top" Height="330" Width="330"/>
         <Machines:CV_Valve HorizontalAlignment="Left" Margin="303,405,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.545,0.455" Height="95" Width="75">
             <Machines:CV_Valve.RenderTransform>
@@ -136,42 +136,32 @@
         </Machines:CV_Valve>
         <Border BorderThickness="1" HorizontalAlignment="Left" Height="169" Margin="210,570,0,0" VerticalAlignment="Top" Width="266" Background="Gray" CornerRadius="15,15,15,15"/>
         <Machines:EXC_HeatExchanger HorizontalAlignment="Left" Margin="523,618,0,0" VerticalAlignment="Top" Height="74" Width="74"/>
-        <Machines:NT_ConveyorBelt HorizontalAlignment="Left" Margin="1063,530,0,0" VerticalAlignment="Top" Width="200"/>
-        <Machines:Radar HorizontalAlignment="Left" Margin="873,173,0,0" VerticalAlignment="Top" Height="75" Width="75"/>
-        <Machines:CV_Valve_001 HorizontalAlignment="Left" Margin="518,414,0,0" VerticalAlignment="Top" Color="Water" RenderTransformOrigin="0.5,0.5" Height="75" Width="80">
-            <Machines:CV_Valve_001.RenderTransform>
-                <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
-                    <RotateTransform Angle="180"/>
-                    <TranslateTransform/>
-                </TransformGroup>
-            </Machines:CV_Valve_001.RenderTransform>
-        </Machines:CV_Valve_001>
-        <Labels:DeviceLabel HorizontalAlignment="Left" Height="50" Margin="785,297,0,0" VerticalAlignment="Top" Width="90" ComponentName="190-01-MA1"/>
-        <Labels:DeviceLabel HorizontalAlignment="Left" Height="50" Margin="1109,297,0,0" VerticalAlignment="Top" Width="90" ComponentName="190-71-ECS1"/>
-        <Rectangle HorizontalAlignment="Left" Height="110" Margin="512,97,0,0" Stroke="Black" VerticalAlignment="Top" Width="2" StrokeThickness="2"/>
-        <Machines:External HorizontalAlignment="Left" Height="70" Margin="475,59,0,0" VerticalAlignment="Top" Width="76"/>
+        <Machines:NT_ConveyorBelt HorizontalAlignment="Left" Margin="1063,520,0,0" VerticalAlignment="Top" Width="200"/>
+        <Machines:Radar HorizontalAlignment="Left" Margin="859,173,0,0" VerticalAlignment="Top" Height="75" Width="75"/>
+        <Labels:DeviceLabel HorizontalAlignment="Left" Height="50" Margin="783,413,0,0" VerticalAlignment="Top" Width="90" ComponentName="190-01-MA1"/>
+        <Labels:DeviceLabel HorizontalAlignment="Left" Height="50" Margin="1109,287,0,0" VerticalAlignment="Top" Width="90" ComponentName="190-71-ECS1"/>
+        <Rectangle HorizontalAlignment="Left" Height="110" Margin="527,97,0,0" Stroke="Black" VerticalAlignment="Top" Width="2" StrokeThickness="2"/>
+        <Machines:External HorizontalAlignment="Left" Height="70" Margin="490,59,0,0" VerticalAlignment="Top" Width="76"/>
         <Labels:DeviceLabel HorizontalAlignment="Left" Height="50" Margin="627,555,0,0" VerticalAlignment="Top" Width="90" ComponentName="190-02-MA1"/>
         <Labels:DeviceLabel HorizontalAlignment="Left" Margin="627,630,0,0" VerticalAlignment="Top" ComponentName="190-05-MA1"/>
         <Labels:DeviceLabel HorizontalAlignment="Left" Margin="359,594,0,0" VerticalAlignment="Top" ComponentName="190-42-TT1"/>
         <Labels:DeviceLabel HorizontalAlignment="Left" Margin="235,668,0,0" VerticalAlignment="Top" ComponentName="190-11-R1"/>
         <Labels:DeviceLabel HorizontalAlignment="Left" Margin="235,593,0,0" VerticalAlignment="Top" ComponentName="190-03-MA1"/>
         <Labels:DeviceLabel HorizontalAlignment="Left" Margin="220,424,0,0" VerticalAlignment="Top" ComponentName="190-24-CV1"/>
-        <Labels:DeviceLabel HorizontalAlignment="Left" Margin="515,368,0,0" VerticalAlignment="Top" ComponentName="190-21-CV1"/>
+        <Labels:DeviceLabel HorizontalAlignment="Left" Margin="515,369,0,0" VerticalAlignment="Top" ComponentName="190-21-CV1"/>
         <Labels:DeviceLabel HorizontalAlignment="Left" Margin="117,0,0,0" VerticalAlignment="Center" ComponentName="190-22-CV1"/>
         <Labels:DeviceLabel HorizontalAlignment="Left" Margin="117,457,0,0" VerticalAlignment="Top" ComponentName="190-22-CV2"/>
-        <Labels:DeviceLabel HorizontalAlignment="Left" Margin="582,69,0,0" VerticalAlignment="Top" ComponentName="190-71-ECS2"/>
-        <Labels:DeviceLabel HorizontalAlignment="Left" Height="50" Margin="866,118,0,0" VerticalAlignment="Top" Width="90" ComponentName="190-41-LT1"/>
-        <Labels:DeviceLabel HorizontalAlignment="Left" Height="50" Margin="1109,118,0,0" VerticalAlignment="Top" Width="90" ComponentName="190-SHREDDER"/>
-        <Rectangle HorizontalAlignment="Left" Height="110" Margin="1049,0,0,0" Stroke="Black" VerticalAlignment="Center" Width="2" StrokeThickness="2"/>
-        <Machines:External HorizontalAlignment="Left" Height="70" Margin="1011,290,0,0" VerticalAlignment="Top" Width="76"/>
+        <Labels:DeviceLabel HorizontalAlignment="Left" Margin="597,69,0,0" VerticalAlignment="Top" ComponentName="190-71-ECS2"/>
+        <Labels:DeviceLabel HorizontalAlignment="Left" Height="50" Margin="852,116,0,0" VerticalAlignment="Top" Width="90" ComponentName="190-41-LT1"/>
+        <Labels:DeviceLabel HorizontalAlignment="Left" Height="50" Margin="1109,116,0,0" VerticalAlignment="Top" Width="90" ComponentName="190-SHREDDER"/>
+        <Rectangle HorizontalAlignment="Left" Height="124" Margin="1049,344,0,0" Stroke="Black" VerticalAlignment="Top" Width="2" StrokeThickness="2"/>
+        <Machines:External HorizontalAlignment="Left" Height="70" Margin="1011,280,0,0" VerticalAlignment="Top" Width="76"/>
         <TextBlock HorizontalAlignment="Left" Margin="117,517,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="88"
 							 Text="{lex:Loc Low Speed}" TextAlignment="Center" FontSize="12"/>
         <TextBlock HorizontalAlignment="Left" Margin="119,369,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="88"
 							 Text="{lex:Loc High Speed}" TextAlignment="Center" FontSize="12"/>
-        <Labels:DeviceLabel HorizontalAlignment="Left" Height="50" Margin="785,593,0,0" VerticalAlignment="Top" Width="90" ComponentName="190-01-YA1"/>
-        <Machines:MaterialInletOutlet HorizontalAlignment="Left" Margin="1293,478,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5" Height="124" Width="125">
+        <Labels:DeviceLabel HorizontalAlignment="Left" Height="50" Margin="783,594,0,0" VerticalAlignment="Top" Width="90" ComponentName="190-01-YA1"/>
+        <Machines:MaterialInletOutlet HorizontalAlignment="Left" Margin="1293,468,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5" Height="124" Width="125">
             <Machines:MaterialInletOutlet.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -181,7 +171,7 @@
                 </TransformGroup>
             </Machines:MaterialInletOutlet.RenderTransform>
         </Machines:MaterialInletOutlet>
-        <Machines:MaterialInletOutlet HorizontalAlignment="Left" Margin="266,36,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5" Height="125" Width="125">
+        <Machines:MaterialInletOutlet HorizontalAlignment="Left" Margin="281,36,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5" Height="125" Width="125">
             <Machines:MaterialInletOutlet.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -191,6 +181,16 @@
                 </TransformGroup>
             </Machines:MaterialInletOutlet.RenderTransform>
         </Machines:MaterialInletOutlet>
-        <Labels:DeviceLabel HorizontalAlignment="Left" Margin="785,668,0,0" VerticalAlignment="Top" ComponentName="190-06-MA1"/>
+        <Labels:DeviceLabel HorizontalAlignment="Left" Margin="783,669,0,0" VerticalAlignment="Top" ComponentName="190-06-MA1"/>
+        <Machines:CV_Valve HorizontalAlignment="Left" Margin="515,408,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.545,0.455" Height="95" Width="75">
+            <Machines:CV_Valve.RenderTransform>
+                <TransformGroup>
+                    <ScaleTransform/>
+                    <SkewTransform/>
+                    <RotateTransform Angle="180.162"/>
+                    <TranslateTransform X="0" Y="4.95"/>
+                </TransformGroup>
+            </Machines:CV_Valve.RenderTransform>
+        </Machines:CV_Valve>
     </Grid>
 </UserControl>
