Added 190-04-MA1 on Synoptyc (was missing)

--- a/Prevu.Synoptics.V2932_Infinya/SH.xaml
+++ b/Prevu.Synoptics.V2932_Infinya/SH.xaml
@@ -142,11 +142,11 @@
         <Labels:DeviceLabel HorizontalAlignment="Left" Height="50" Margin="1109,287,0,0" VerticalAlignment="Top" Width="90" ComponentName="190-71-ECS1"/>
         <Rectangle HorizontalAlignment="Left" Height="110" Margin="527,97,0,0" Stroke="Black" VerticalAlignment="Top" Width="2" StrokeThickness="2"/>
         <Machines:External HorizontalAlignment="Left" Height="70" Margin="490,59,0,0" VerticalAlignment="Top" Width="76"/>
-        <Labels:DeviceLabel HorizontalAlignment="Left" Height="50" Margin="627,555,0,0" VerticalAlignment="Top" Width="90" ComponentName="190-02-MA1"/>
-        <Labels:DeviceLabel HorizontalAlignment="Left" Margin="627,630,0,0" VerticalAlignment="Top" ComponentName="190-05-MA1"/>
-        <Labels:DeviceLabel HorizontalAlignment="Left" Margin="359,594,0,0" VerticalAlignment="Top" ComponentName="190-42-TT1"/>
+        <Labels:DeviceLabel HorizontalAlignment="Left" Height="50" Margin="619,555,0,0" VerticalAlignment="Top" Width="90" ComponentName="190-02-MA1"/>
+        <Labels:DeviceLabel HorizontalAlignment="Left" Margin="619,630,0,0" VerticalAlignment="Top" ComponentName="190-05-MA1"/>
+        <Labels:DeviceLabel HorizontalAlignment="Left" Margin="359,668,0,0" VerticalAlignment="Top" ComponentName="190-42-TT1"/>
         <Labels:DeviceLabel HorizontalAlignment="Left" Margin="235,668,0,0" VerticalAlignment="Top" ComponentName="190-11-R1"/>
-        <Labels:DeviceLabel HorizontalAlignment="Left" Margin="235,593,0,0" VerticalAlignment="Top" ComponentName="190-03-MA1"/>
+        <Labels:DeviceLabel HorizontalAlignment="Left" Margin="235,597,0,0" VerticalAlignment="Top" ComponentName="190-03-MA1"/>
         <Labels:DeviceLabel HorizontalAlignment="Left" Margin="220,424,0,0" VerticalAlignment="Top" ComponentName="190-24-CV1"/>
         <Labels:DeviceLabel HorizontalAlignment="Left" Margin="515,369,0,0" VerticalAlignment="Top" ComponentName="190-21-CV1"/>
         <Labels:DeviceLabel HorizontalAlignment="Left" Margin="117,0,0,0" VerticalAlignment="Center" ComponentName="190-22-CV1"/>
@@ -192,5 +192,10 @@
                 </TransformGroup>
             </Machines:CV_Valve.RenderTransform>
         </Machines:CV_Valve>
+        <TextBlock HorizontalAlignment="Left" Margin="606,534,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="118" TextAlignment="Center" FontSize="12" Text="GearBox Cooling"/>
+        <Labels:DeviceLabel HorizontalAlignment="Left" Margin="359,598,0,0" VerticalAlignment="Top" ComponentName="190-04-MA1"/>
+        <TextBlock HorizontalAlignment="Left" Margin="605,686,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="118" TextAlignment="Center" FontSize="12" Text="Oil Cooling"/>
+        <TextBlock HorizontalAlignment="Left" Margin="222,575,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="118" TextAlignment="Center" FontSize="12" Text="Pusher Pump"/>
+        <TextBlock HorizontalAlignment="Left" Margin="347,576,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="118" TextAlignment="Center" FontSize="12" Text="Recirculation"/>
     </Grid>
 </UserControl>
