--- a/Test/MainWindow.xaml
+++ b/Test/MainWindow.xaml
@@ -10,7 +10,7 @@
   
     <ScrollViewer>
         <StackPanel>
-            <Synoptics:SH/>          
+            <Synoptics:GR1/>          
         </StackPanel>
     </ScrollViewer>
 
