--- a/Prevu.Synoptics.V2048-ReCiclar_CMF/320.xaml
+++ b/Prevu.Synoptics.V2048-ReCiclar_CMF/320.xaml
@@ -26,8 +26,8 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Left" Margin="183,123,0,0" VerticalAlignment="Top" Width="117" StatusComponent="024-01-MA1" PipeHeight="Medium"/>
-        <Labels:Pipe HorizontalAlignment="Left" Margin="233,180,0,0" VerticalAlignment="Top" Width="124" StatusComponent="024-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5">
+        <Labels:Pipe HorizontalAlignment="Left" Margin="183,123,0,0" VerticalAlignment="Top" Width="117" StatusComponent="234-01-MA1" PipeHeight="Medium"/>
+        <Labels:Pipe HorizontalAlignment="Left" Margin="233,180,0,0" VerticalAlignment="Top" Width="124" StatusComponent="234-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -48,8 +48,8 @@
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
         <Labels:Pipe HorizontalAlignment="Left" Margin="977,591,0,0" VerticalAlignment="Top" Width="72" StatusComponent="322-01-MA1" PipeHeight="Medium" Height="14"/>
-        <Labels:Pipe HorizontalAlignment="Left" Margin="201,273,0,0" VerticalAlignment="Top" Color="Air" Width="73" StatusComponent="282-21-CV1"/>
-        <Labels:Pipe HorizontalAlignment="Left" Margin="117,467,0,0" VerticalAlignment="Top" Width="356" StatusComponent="024-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5">
+        <Labels:Pipe HorizontalAlignment="Left" Margin="201,273,0,0" VerticalAlignment="Top" Color="Air" Width="73" StatusComponent="268-21-CV1"/>
+        <Labels:Pipe HorizontalAlignment="Left" Margin="117,467,0,0" VerticalAlignment="Top" Width="356" StatusComponent="268-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -59,7 +59,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Left" Margin="325,367,0,0" VerticalAlignment="Top" Width="247" StatusComponent="170-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Height="6">
+        <Labels:Pipe HorizontalAlignment="Left" Margin="325,367,0,0" VerticalAlignment="Top" Width="247" StatusComponent="269-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Height="6">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -69,7 +69,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Left" Margin="576,507,0,0" VerticalAlignment="Top" Width="40" StatusComponent="025-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct">
+        <Labels:Pipe HorizontalAlignment="Left" Margin="576,507,0,0" VerticalAlignment="Top" Width="40" StatusComponent="273-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -79,7 +79,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Left" Margin="563,413,0,0" VerticalAlignment="Top" Width="67" StatusComponent="170-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Height="6">
+        <Labels:Pipe HorizontalAlignment="Left" Margin="563,413,0,0" VerticalAlignment="Top" Width="67" StatusComponent="269-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Height="6">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -89,8 +89,8 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Left" Margin="625,344,0,0" VerticalAlignment="Top" Color="Air" Width="79" StatusComponent="282-21-CV1"/>
-        <Labels:Pipe HorizontalAlignment="Left" Margin="576,467,0,0" VerticalAlignment="Top" Color="Air" Width="251" StatusComponent="282-21-CV1" RenderTransformOrigin="0.5,0.5">
+        <Labels:Pipe HorizontalAlignment="Left" Margin="625,344,0,0" VerticalAlignment="Top" Color="Air" Width="79" StatusComponent="269-01-MA1"/>
+        <Labels:Pipe HorizontalAlignment="Left" Margin="576,467,0,0" VerticalAlignment="Top" Color="Air" Width="251" StatusComponent="269-01-MA1" RenderTransformOrigin="0.5,0.5">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -100,8 +100,8 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Left" Margin="329,591,0,0" VerticalAlignment="Top" Color="Air" Width="375" StatusComponent="282-21-CV1"/>
-        <Labels:Pipe HorizontalAlignment="Left" Margin="215,752,0,0" VerticalAlignment="Top" Width="61" StatusComponent="170-01-MA1" RenderTransformOrigin="0.5,0.5" Color="Air" Height="6">
+        <Labels:Pipe HorizontalAlignment="Left" Margin="329,591,0,0" VerticalAlignment="Top" Color="Air" Width="375" StatusComponent="269-01-MA1"/>
+        <Labels:Pipe HorizontalAlignment="Left" Margin="215,752,0,0" VerticalAlignment="Top" Width="61" StatusComponent="292-01-MA1" RenderTransformOrigin="0.5,0.5" Color="Air" Height="6">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -111,7 +111,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Left" Margin="320,755,0,0" VerticalAlignment="Top" Width="430" StatusComponent="324-01-MA1" PipeHeight="Medium" Height="24" RenderTransformOrigin="0.5,0.5">
+        <Labels:Pipe HorizontalAlignment="Left" Margin="320,755,0,0" VerticalAlignment="Top" Width="430" StatusComponent="292-01-MA1" PipeHeight="Medium" Height="24" RenderTransformOrigin="0.5,0.5">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -121,7 +121,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Left" Margin="269,710,0,0" VerticalAlignment="Top" Width="52" StatusComponent="024-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5">
+        <Labels:Pipe HorizontalAlignment="Left" Margin="269,710,0,0" VerticalAlignment="Top" Width="52" StatusComponent="290-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -131,7 +131,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Left" Margin="510,530,0,0" VerticalAlignment="Top" Width="471" StatusComponent="170-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Height="13">
+        <Labels:Pipe HorizontalAlignment="Left" Margin="510,530,0,0" VerticalAlignment="Top" Width="471" StatusComponent="292-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Height="13">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -141,7 +141,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Left" Margin="741,293,0,0" VerticalAlignment="Top" Width="132" StatusComponent="324-01-MA1" PipeHeight="Medium" Height="24" RenderTransformOrigin="0.5,0.5">
+        <Labels:Pipe HorizontalAlignment="Left" Margin="741,293,0,0" VerticalAlignment="Top" Width="132" StatusComponent="292-01-MA1" PipeHeight="Medium" Height="24" RenderTransformOrigin="0.5,0.5">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -155,7 +155,7 @@
         <Machines:SCW_ScrewConveyor_inclined HorizontalAlignment="Left" Margin="845,479,0,0" VerticalAlignment="Top" Height="160" Width="155"/>
         <Machines:Radar HorizontalAlignment="Left" Margin="860,235,0,0" VerticalAlignment="Top" Height="49" Width="28"/>
         <Machines:VS_Airlock HorizontalAlignment="Left" Margin="258,237,0,0" VerticalAlignment="Top" Height="72" Width="75"/>
-        <Machines:CV_Valve_001 HorizontalAlignment="Left" Margin="137,228,0,0" VerticalAlignment="Top" Height="100" Width="100" Color="Air" RenderTransformOrigin="0.5,0.5">
+        <Machines:CV_Valve_001 HorizontalAlignment="Left" Margin="137,226,0,0" VerticalAlignment="Top" Height="100" Width="100" Color="Air" RenderTransformOrigin="0.5,0.5">
             <Machines:CV_Valve_001.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform ScaleX="-0.5" ScaleY="0.5"/>
@@ -189,8 +189,8 @@
         <Labels:JumpLabel HorizontalAlignment="Left" 
             Margin="118,91,0,0" 
             VerticalAlignment="Top" 
-            JumpFromLabel="322-01-MA1" 
-            JumpToLabel="420-01-MA1"/>
+            JumpFromLabel="268-01-MA1" 
+            JumpToLabel="234-01-MA1"/>
         <Labels:DeviceLabel HorizontalAlignment="Left" 
             Margin="943,305,0,0" 
             VerticalAlignment="Top" 
