--- a/Prevu.Synoptics.V2048-ReCiclar_CMF/371.xaml
+++ b/Prevu.Synoptics.V2048-ReCiclar_CMF/371.xaml
@@ -8,103 +8,117 @@
              xmlns:Labels="clr-namespace:Prevu.UIComponents.Labels;assembly=Prevu.UIComponents" 
              mc:Ignorable="d" 
              Height="840" Width="1420" d:Background="{DynamicResource MaterialDesignPaper}">
-	<Grid>
-		<Labels:Pipe HorizontalAlignment="Left" Margin="241,265,0,0" VerticalAlignment="Top" Color="Water" Width="140" RenderTransformOrigin="0.5,0.5" StatusComponent="371-21-CV3" >
-			<Labels:Pipe.RenderTransform>
-				<TransformGroup>
-					<ScaleTransform/>
-					<SkewTransform/>
-					<RotateTransform Angle="90"/>
-					<TranslateTransform/>
-				</TransformGroup>
-			</Labels:Pipe.RenderTransform>
-		</Labels:Pipe>
-		<Labels:Pipe HorizontalAlignment="Left" Margin="226,457,0,0" VerticalAlignment="Top" Width="104" Color="Chemicals" RenderTransformOrigin="0.5,0.5" StatusComponent="371-21-CV1">
-			<Labels:Pipe.RenderTransform>
-				<TransformGroup>
-					<ScaleTransform/>
-					<SkewTransform/>
-					<RotateTransform Angle="90"/>
-					<TranslateTransform/>
-				</TransformGroup>
-			</Labels:Pipe.RenderTransform>
-		</Labels:Pipe>
-		<Labels:Pipe HorizontalAlignment="Left" Margin="246,273,0,0" VerticalAlignment="Top" Width="48" Color="Chemicals" RenderTransformOrigin="0.5,0.5" StatusComponent="371-21-CV2">
-			<Labels:Pipe.RenderTransform>
-				<TransformGroup>
-					<ScaleTransform/>
-					<SkewTransform/>
-					<RotateTransform Angle="90"/>
-					<TranslateTransform/>
-				</TransformGroup>
-			</Labels:Pipe.RenderTransform>
-		</Labels:Pipe>
-		<Labels:Pipe HorizontalAlignment="Left" Margin="232,243,0,0" VerticalAlignment="Top" Width="110" Color="Chemicals" RenderTransformOrigin="0.5,0.5" StatusComponent="371-21-CV1">
-			<Labels:Pipe.RenderTransform>
-				<TransformGroup>
-					<ScaleTransform/>
-					<SkewTransform/>
-					<RotateTransform Angle="90"/>
-					<TranslateTransform/>
-				</TransformGroup>
-			</Labels:Pipe.RenderTransform>
-		</Labels:Pipe>
-		<Machines:Chemical_dosing HorizontalAlignment="Left" Margin="207,295,0,0" VerticalAlignment="Top" Height="130" Width="144"/>
-		<Labels:Pipe HorizontalAlignment="Left" Margin="216,185,0,0" VerticalAlignment="Top" Width="73" RenderTransformOrigin="0.497,0.467" Color="Chemicals" StatusComponent="371-21-CV1" Height="13"/>
-		<Machines:WaterPump HorizontalAlignment="Left" Margin="191,158,0,0" VerticalAlignment="Top" Height="70" Width="50" RenderTransformOrigin="0.5,0.5" Color="Chemicals">
-			<Machines:WaterPump.RenderTransform>
-				<TransformGroup>
-					<ScaleTransform ScaleX="1"/>
-					<SkewTransform/>
-					<RotateTransform/>
-					<TranslateTransform/>
-				</TransformGroup>
-			</Machines:WaterPump.RenderTransform>
-		</Machines:WaterPump>
-		<Labels:Pipe HorizontalAlignment="Left" Margin="207,247,0,0" VerticalAlignment="Top" Width="65" RenderTransformOrigin="0.497,0.467" Color="Chemicals" StatusComponent="371-21-CV2" Height="11"/>
-		<Machines:WaterPump HorizontalAlignment="Left" Margin="190,218,0,0" VerticalAlignment="Top" Height="71" Width="53" RenderTransformOrigin="0.5,0.5" Color="Chemicals">
-			<Machines:WaterPump.RenderTransform>
-				<TransformGroup>
-					<ScaleTransform ScaleX="1"/>
-					<SkewTransform/>
-					<RotateTransform/>
-					<TranslateTransform/>
-				</TransformGroup>
-			</Machines:WaterPump.RenderTransform>
-		</Machines:WaterPump>
-		<Machines:CV_Valve_001 HorizontalAlignment="Left" Margin="261,119,0,0" VerticalAlignment="Top" Height="100" Width="100" Color="Water" RenderTransformOrigin="0.51,0.539">
-			<Machines:CV_Valve_001.RenderTransform>
-				<TransformGroup>
-					<ScaleTransform ScaleX="0.5" ScaleY="0.5"/>
-					<SkewTransform/>
-					<RotateTransform Angle="-90"/>
-					<TranslateTransform X="0" Y="0"/>
-				</TransformGroup>
-			</Machines:CV_Valve_001.RenderTransform>
-		</Machines:CV_Valve_001>
-		<Labels:Pipe HorizontalAlignment="Left" Margin="275,507,0,0" VerticalAlignment="Top" Width="85" Color="Chemicals" RenderTransformOrigin="0.5,0.5" StatusComponent="371-21-CV1">
-		</Labels:Pipe>
-		<Labels:DeviceLabel HorizontalAlignment="Left" 
-				Margin="93,168,0,0" 
+    <Grid>
+        <Labels:Pipe HorizontalAlignment="Left" Margin="359,363,0,0" VerticalAlignment="Top" Color="Water" Width="140" RenderTransformOrigin="0.5,0.5" StatusComponent="371-21-CV3" >
+            <Labels:Pipe.RenderTransform>
+                <TransformGroup>
+                    <ScaleTransform/>
+                    <SkewTransform/>
+                    <RotateTransform Angle="90"/>
+                    <TranslateTransform/>
+                </TransformGroup>
+            </Labels:Pipe.RenderTransform>
+        </Labels:Pipe>
+        <Labels:Pipe HorizontalAlignment="Left" Margin="345,555,0,0" VerticalAlignment="Top" Width="104" Color="Chemicals" RenderTransformOrigin="0.5,0.5" StatusComponent="371-21-CV1">
+            <Labels:Pipe.RenderTransform>
+                <TransformGroup>
+                    <ScaleTransform/>
+                    <SkewTransform/>
+                    <RotateTransform Angle="90"/>
+                    <TranslateTransform/>
+                </TransformGroup>
+            </Labels:Pipe.RenderTransform>
+        </Labels:Pipe>
+        <Labels:Pipe HorizontalAlignment="Left" Margin="365,371,0,0" VerticalAlignment="Top" Width="48" Color="Chemicals" RenderTransformOrigin="0.5,0.5" StatusComponent="371-21-CV2">
+            <Labels:Pipe.RenderTransform>
+                <TransformGroup>
+                    <ScaleTransform/>
+                    <SkewTransform/>
+                    <RotateTransform Angle="90"/>
+                    <TranslateTransform/>
+                </TransformGroup>
+            </Labels:Pipe.RenderTransform>
+        </Labels:Pipe>
+        <Labels:Pipe HorizontalAlignment="Left" Margin="351,341,0,0" VerticalAlignment="Top" Width="110" Color="Chemicals" RenderTransformOrigin="0.5,0.5" StatusComponent="371-21-CV1">
+            <Labels:Pipe.RenderTransform>
+                <TransformGroup>
+                    <ScaleTransform/>
+                    <SkewTransform/>
+                    <RotateTransform Angle="90"/>
+                    <TranslateTransform/>
+                </TransformGroup>
+            </Labels:Pipe.RenderTransform>
+        </Labels:Pipe>
+        <Labels:Pipe HorizontalAlignment="Left" Margin="335,616,0,0" VerticalAlignment="Top" Width="144" RenderTransformOrigin="0.497,0.467" Color="Chemicals" StatusComponent="371-22-CV3" Height="12"/>
+        <Labels:Pipe HorizontalAlignment="Left" Margin="335,283,0,0" VerticalAlignment="Top" Width="72" RenderTransformOrigin="0.497,0.467" Color="Chemicals" StatusComponent="371-21-CV1" Height="12"/>
+        <Labels:Pipe HorizontalAlignment="Left" Margin="325,345,0,0" VerticalAlignment="Top" Width="66" RenderTransformOrigin="0.497,0.467" Color="Chemicals" StatusComponent="371-21-CV2" Height="10"/>
+        <Labels:Pipe HorizontalAlignment="Left" Margin="395,605,0,0" VerticalAlignment="Top" Width="84" Color="Chemicals" RenderTransformOrigin="0.5,0.5" StatusComponent="371-21-CV1"/>
+        <Machines:Chemical_dosing HorizontalAlignment="Left" Margin="325,393,0,0" VerticalAlignment="Top" Height="130" Width="144"/>
+        <Machines:WaterPump HorizontalAlignment="Left" Margin="309,255,0,0" VerticalAlignment="Top" Height="70" Width="50" RenderTransformOrigin="0.5,0.5" Color="Chemicals">
+            <Machines:WaterPump.RenderTransform>
+                <TransformGroup>
+                    <ScaleTransform ScaleX="1"/>
+                    <SkewTransform/>
+                    <RotateTransform/>
+                    <TranslateTransform/>
+                </TransformGroup>
+            </Machines:WaterPump.RenderTransform>
+        </Machines:WaterPump>
+        <Machines:WaterPump HorizontalAlignment="Left" Margin="309,315,0,0" VerticalAlignment="Top" Height="72" Width="52" RenderTransformOrigin="0.5,0.5" Color="Chemicals">
+            <Machines:WaterPump.RenderTransform>
+                <TransformGroup>
+                    <ScaleTransform ScaleX="1"/>
+                    <SkewTransform/>
+                    <RotateTransform/>
+                    <TranslateTransform/>
+                </TransformGroup>
+            </Machines:WaterPump.RenderTransform>
+        </Machines:WaterPump>
+        <Machines:CV_Valve_001 HorizontalAlignment="Left" Margin="379,217,0,0" VerticalAlignment="Top" Height="100" Width="100" Color="Water" RenderTransformOrigin="0.51,0.539">
+            <Machines:CV_Valve_001.RenderTransform>
+                <TransformGroup>
+                    <ScaleTransform ScaleX="0.5" ScaleY="0.5"/>
+                    <SkewTransform/>
+                    <RotateTransform Angle="-90"/>
+                    <TranslateTransform X="0" Y="0"/>
+                </TransformGroup>
+            </Machines:CV_Valve_001.RenderTransform>
+        </Machines:CV_Valve_001>
+        <Machines:WaterPump HorizontalAlignment="Left" Margin="309,588,0,0" VerticalAlignment="Top" Height="70" Width="50" RenderTransformOrigin="0.5,0.5" Color="Chemicals">
+            <Machines:WaterPump.RenderTransform>
+                <TransformGroup>
+                    <ScaleTransform ScaleX="1"/>
+                    <SkewTransform/>
+                    <RotateTransform/>
+                    <TranslateTransform/>
+                </TransformGroup>
+            </Machines:WaterPump.RenderTransform>
+        </Machines:WaterPump>
+        <Labels:JumpLabel HorizontalAlignment="Left" Margin="475,578,0,0" VerticalAlignment="Top" JumpFromLabel="371-21-CV1" JumpToLabel="370-41-LT1"/>
+        <Labels:DeviceLabel HorizontalAlignment="Left" 
+				Margin="211,265,0,0" 
 				VerticalAlignment="Top" 
 				ComponentName="371-21-CV1"/>
-		<Labels:DeviceLabel HorizontalAlignment="Left" 
-				Margin="93,228,0,0" 
+        <Labels:DeviceLabel HorizontalAlignment="Left" 
+				Margin="211,325,0,0" 
 				VerticalAlignment="Top" 
 				ComponentName="371-21-CV2"/>
-		<Labels:DeviceLabel HorizontalAlignment="Left" 
-				Margin="266,91,0,0" 
+        <Labels:DeviceLabel HorizontalAlignment="Left" 
+				Margin="385,189,0,0" 
 				VerticalAlignment="Top" 
 				ComponentName="371-21-CV3"/>
-		<Labels:DeviceLabel HorizontalAlignment="Left" 
-				Margin="93,329,0,0" 
+        <Labels:DeviceLabel HorizontalAlignment="Left" 
+				Margin="211,427,0,0" 
 				VerticalAlignment="Top" 
 				ComponentName="371-41-WT1"/>
-		<Labels:DeviceLabel HorizontalAlignment="Left" 
-				Margin="93,389,0,0" 
+        <Labels:DeviceLabel HorizontalAlignment="Left" 
+				Margin="211,487,0,0" 
 				VerticalAlignment="Top" 
 				ComponentName="371-ACS" RenderTransformOrigin="0.5,0.52"/>
-		<Labels:JumpLabel HorizontalAlignment="Left" Margin="357,475,0,0" VerticalAlignment="Top" JumpFromLabel="371-21-CV1" JumpToLabel="470-41-LT1"/>
+        <Labels:DeviceLabel HorizontalAlignment="Left" 
+            Margin="211,598,0,0" 
+            VerticalAlignment="Top" 
+            ComponentName="371-22-CV3"/>
 
-	</Grid>
+    </Grid>
 </UserControl>
